# Mike's Lattice Utilities - Analyze

LDADD = ../MLU/libMLU.a $(MLU_LIBS)

bin_PROGRAMS = bootstrap corr corrstat Debug Divide FitSummary GaugeCmp GetColumn hlxml ImportCorr lime_truncate MakeEnsembleInfo repair SynthData

bootstrap_SOURCES = bootstrap.cpp
corr_SOURCES = corr.cpp
corrstat_SOURCES = corrstat.cpp
Debug_SOURCES = Debug.cpp
Divide_SOURCES = Divide.cpp
FitSummary_SOURCES =  FitSummary.cpp
GaugeCmp_SOURCES = GaugeCmp.cpp
GetColumn_SOURCES = GetColumn.cpp
hlxml_SOURCES = hlxml.cpp
ImportCorr_SOURCES = hlxml.cpp
lime_truncate = lime_truncate.c
MakeEnsembleInfo = MakeEnsembleInfo.cpp
repair_SOURCES = repair.cpp
SynthData_SOURCES = SynthData.cpp
