# Mike's Lattice Utilities - libMLU

lib_LIBRARIES = libMLU.a

libMLU_a_SOURCES = Common.cpp DebugInfo.cpp FitRange.cpp GSLVecMat.cpp HDF5.cpp Math.cpp Param.cpp Physics.cpp String.cpp

MLUincludedir = $(includedir)/MLU
MLUinclude_HEADERS = Common.hpp DebugInfo.hpp FitRange.hpp GSLVecMat.hpp GSLVecMatImp.hpp HDF5.hpp Math.hpp Param.hpp Physics.hpp String.hpp
