# Mike's Lattice Utilities - libMLU

lib_LIBRARIES = libMLU.a

libMLU_a_SOURCES = CorrFile.cpp DataSet.cpp DebugInfo.cpp FitRange.cpp Fold.cpp GSLVecMat.cpp HDF5.cpp JackBoot.cpp Math.cpp Model.cpp Param.cpp Physics.cpp Posix.cpp Sample.cpp String.cpp Utility.cpp

MLUincludedir = $(includedir)/MLU
MLUinclude_HEADERS = Common.hpp CorrFile.hpp DataSet.hpp DebugInfo.hpp FitRange.hpp Fold.hpp FitRangeImp.hpp GSLVecMat.hpp GSLVecMatImp.hpp HDF5.hpp JackBoot.hpp Math.hpp Model.hpp Param.hpp Physics.hpp Posix.hpp Sample.hpp String.hpp Utility.hpp
