# Mike's Lattice Utilities - Study

LDADD = ../MLU/libMLU.a $(MLU_LIBS)

bin_PROGRAMS = mixedop peramb-compare CRatio xml3pt xmlGFWall xmlPeramb xmlZ2

mixedop_SOURCES = mixedop.cpp
peramb_compare_SOURCES = peramb-compare.cpp
CRatio_SOURCES = CRatio.cpp
xml3pt_SOURCES = xml3pt.cpp HadronsApp.cpp
xmlGFWall_SOURCES = xmlGFWall.cpp
xmlPeramb_SOURCES = xmlPeramb.cpp
xmlZ2_SOURCES = xmlZ2.cpp
