# Mike's Lattice Utilities - Study

LDADD = ../MLU/libMLU.a $(MLU_LIBS)

bin_PROGRAMS = GaugeFix mixedop peramb-compare Ratio xml3pt xmlGFWall xmlPeramb xmlZ2

GaugeFix_SOURCES = GaugeFix.cpp
mixedop_SOURCES = mixedop.cpp
peramb_compare_SOURCES = peramb-compare.cpp
Ratio_SOURCES = Ratio.cpp
xml3pt_SOURCES = xml3pt.cpp HadronsApp.cpp
xmlGFWall_SOURCES = xmlGFWall.cpp
xmlPeramb_SOURCES = xmlPeramb.cpp
xmlZ2_SOURCES = xmlZ2.cpp
